fix(jdk17): List.removeLast()/removeFirst() -> remove(0)/remove(size()-1)
Sibling SequencedCollection methods (JDK 21) that the existing getFirst()/getLast()
sweep never covered. Found via real-JDK17 compile errors after the backport's
verification (JDK 21 toolchain, source/target not release) couldn't catch them.